Atualização certificados e remoção de index em EN e ZH

--- a/i/br/certificados.html
+++ b/i/br/certificados.html
@@ -802,7 +802,7 @@
           <li><a href="#contato">Contato</a></li>
         </ul>
         <div class="bd-header-meta">
-          <a href="/i/zh/certificados">
+          <a href="/i/zh/certificados.html">
             <img
               src="/i/assets/images/china.svg"
               width="40"
@@ -810,7 +810,7 @@
               alt="China"
             />
           </a>
-          <a href="/i/br/certificados">
+          <a href="/i/br/certificados.html">
             <img
               src="/i/assets/images/brasil.svg"
               width="40"
@@ -818,7 +818,7 @@
               alt="Brasil"
             />
           </a>
-          <a href="/i/en/certificados">
+          <a href="/i/en/certificados.html">
             <img
               src="/i/assets/images/eua.svg"
               width="40"
@@ -826,7 +826,7 @@
               alt="EUA"
             />
           </a>
-          <a href="/i/es/certificados">
+          <a href="/i/es/certificados.html">
             <img
               src="/i/assets/images/espanha.png"
               width="40"
