--- a/i/en/certificados.html
+++ b/i/en/certificados.html
@@ -739,7 +739,7 @@
                 </div>
                 <div class="bd-header-right">
                   <div class="bd-header-meta">
-                    <a href="/i/zh/certificados">
+                    <a href="/i/zh/certificados.html">
                       <img
                         src="/i/assets/images/china.svg"
                         width="40"
@@ -747,7 +747,7 @@
                         alt="China"
                       />
                     </a>
-                    <a href="/i/br/certificados">
+                    <a href="/i/br/certificados.html">
                       <img
                         src="/i/assets/images/brasil.svg"
                         width="40"
@@ -755,7 +755,7 @@
                         alt="Brazil"
                       />
                     </a>
-                    <a href="/i/en/certificados">
+                    <a href="/i/en/certificados.html">
                       <img
                         src="/i/assets/images/eua.svg"
                         width="40"
@@ -763,7 +763,7 @@
                         alt="USA"
                       />
                     </a>
-                    <a href="/i/es/certificados">
+                    <a href="/i/es/certificados.html">
                       <img
                         src="/i/assets/images/espanha.png"
                         width="40"
