--- a/i/zh/certificados.html
+++ b/i/zh/certificados.html
@@ -738,7 +738,7 @@
                 </div>
                 <div class="bd-header-right">
                   <div class="bd-header-meta">
-                    <a href="/i/zh/certificados">
+                    <a href="/i/zh/certificados.html">
                       <img
                         src="/i/assets/images/china.svg"
                         width="40"
@@ -746,7 +746,7 @@
                         alt="中国"
                       />
                     </a>
-                    <a href="/i/br/certificados">
+                    <a href="/i/br/certificados.html">
                       <img
                         src="/i/assets/images/brasil.svg"
                         width="40"
@@ -754,7 +754,7 @@
                         alt="巴西"
                       />
                     </a>
-                    <a href="/i/en/certificados">
+                    <a href="/i/en/certificados.html">
                       <img
                         src="/i/assets/images/eua.svg"
                         width="40"
@@ -762,7 +762,7 @@
                         alt="美国"
                       />
                     </a>
-                    <a href="/i/es/certificados">
+                    <a href="/i/es/certificados.html">
                       <img
                         src="/i/assets/images/espanha.png"
                         width="40"
@@ -810,7 +810,7 @@
               alt="中国"
             />
           </a>
-          <a href="/i/br/certificados">
+          <a href="/i/br/certificados.html">
             <img
               src="/i/assets/images/brasil.svg"
               width="40"
@@ -818,7 +818,7 @@
               alt="巴西"
             />
           </a>
-          <a href="/i/en/certificados">
+          <a href="/i/en/certificados.html">
             <img
               src="/i/assets/images/eua.svg"
               width="40"
@@ -826,7 +826,7 @@
               alt="美国"
             />
           </a>
-          <a href="/i/es/certificados">
+          <a href="/i/es/certificados.html">
             <img
               src="/i/assets/images/espanha.png"
               width="40"
